fix data not showing on reload

--- a/src/Screens/stylesheets/Directory.less
+++ b/src/Screens/stylesheets/Directory.less
@@ -2,7 +2,7 @@
 @import "~antd/dist/antd.less";
 
 .bodyDirectory {
-    margin: 0 22em;
+    margin: 0 350px;
 }
 
 .buttonList {
